--- a/吉田学園情報ビジネス専門学校_黒田周吾/01_SkyMachine2/01_開発環境/SkyMachine002/SkyMachine002.vcxproj
+++ b/吉田学園情報ビジネス専門学校_黒田周吾/01_SkyMachine2/01_開発環境/SkyMachine002/SkyMachine002.vcxproj
@@ -19,30 +19,39 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="barrier.cpp" />
     <ClCompile Include="base.cpp" />
     <ClCompile Include="bg.cpp" />
+    <ClCompile Include="bg_move.cpp" />
     <ClCompile Include="bubble.cpp" />
     <ClCompile Include="bullet.cpp" />
+    <ClCompile Include="bullet_option.cpp" />
     <ClCompile Include="cloud.cpp" />
+    <ClCompile Include="continue.cpp" />
     <ClCompile Include="effect.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="enemy_boss.cpp" />
     <ClCompile Include="explosion.cpp" />
-    <ClCompile Include="fade_mode.cpp" />
     <ClCompile Include="fade.cpp" />
+    <ClCompile Include="fade_scene.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="gauge.cpp" />
     <ClCompile Include="input.cpp" />
     <ClCompile Include="input_joypad.cpp" />
     <ClCompile Include="input_keyboard.cpp" />
     <ClCompile Include="input_mouse.cpp" />
+    <ClCompile Include="item.cpp" />
     <ClCompile Include="library.cpp" />
+    <ClCompile Include="life.cpp" />
     <ClCompile Include="load.cpp" />
     <ClCompile Include="logo.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="manager.cpp" />
+    <ClCompile Include="meshfield.cpp" />
     <ClCompile Include="number.cpp" />
     <ClCompile Include="object.cpp" />
     <ClCompile Include="object2D.cpp" />
+    <ClCompile Include="pause.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="rank.cpp" />
     <ClCompile Include="renderer.cpp" />
@@ -54,32 +63,41 @@
     <ClCompile Include="ui.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="barrier.h" />
     <ClInclude Include="base.h" />
     <ClInclude Include="bg.h" />
+    <ClInclude Include="bg_move.h" />
     <ClInclude Include="bubble.h" />
     <ClInclude Include="bullet.h" />
+    <ClInclude Include="bullet_option.h" />
     <ClInclude Include="cloud.h" />
     <ClInclude Include="cloud_data.h" />
+    <ClInclude Include="continue.h" />
     <ClInclude Include="effect.h" />
     <ClInclude Include="enemy.h" />
     <ClInclude Include="enemy_boss.h" />
     <ClInclude Include="enemy_data.h" />
     <ClInclude Include="explosion.h" />
-    <ClInclude Include="fade_mode.h" />
     <ClInclude Include="fade.h" />
+    <ClInclude Include="fade_scene.h" />
     <ClInclude Include="game.h" />
+    <ClInclude Include="gauge.h" />
     <ClInclude Include="input.h" />
     <ClInclude Include="input_joypad.h" />
     <ClInclude Include="input_keyboard.h" />
     <ClInclude Include="input_mouse.h" />
+    <ClInclude Include="item.h" />
     <ClInclude Include="library.h" />
+    <ClInclude Include="life.h" />
     <ClInclude Include="load.h" />
     <ClInclude Include="logo.h" />
     <ClInclude Include="main.h" />
     <ClInclude Include="manager.h" />
+    <ClInclude Include="meshfield.h" />
     <ClInclude Include="number.h" />
     <ClInclude Include="object.h" />
     <ClInclude Include="object2D.h" />
+    <ClInclude Include="pause.h" />
     <ClInclude Include="player.h" />
     <ClInclude Include="rank.h" />
     <ClInclude Include="renderer.h" />
@@ -114,7 +132,7 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v140</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -149,6 +167,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -179,7 +199,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_WINDOWS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
